--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "a-toolchain-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx parcel src/index.html --open --lazy"
+    "dev": "npx parcel src/index.html --open --lazy",
+    "build": "parcel build src/index.html"
   },
   "keywords": [],
   "author": "",
